# cFS-FPGA

./: CMakeLists.txt
fsw/mission_inc/: fpga_ctrl_perfids.h
fsw/platform_inc/: fpga_ctrl_msgids.h  fpga_ctrl_table.h
fsw/src/: fpga_ctrl.c  fpga_ctrl.h  fpga_ctrl_aes.h  fpga_ctrl_events.h  fpga_ctrl_interrupts.h  fpga_ctrl_load_bitstream.h  fpga_ctrl_msg.h  fpga_ctrl_version.h
fsw/tables/: fpga_ctrl_tbl.c
